Mon Sep 26 15:43:34 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* eval_intern.h (TH_PUSH_TAG): Initialize struct rb_vm_tag::tag with
	  Qundef rather than 0 which is equal to Qfalse. Since Kernel#throw(obj)
	  searches a tag with rb_vm_tag::tag == obj, throw(false) can
	  accidentally find an unrelated tag which is not created by
	  Kernel#catch.  [ruby-core:77229] [Bug #12743]

	* test/ruby/test_exception.rb (test_throw_false): Add a test case for
	  this.

Mon Sep 26 14:36:12 2016  Naotoshi Seo  <sonots@gmail.com>

	* lib/tempfile.rb: provide default basename parameter for
	  Tempfile.create. [Feature #11965] Patch by Yuki Kurihara
	* test/test_tempfile.rb: ditto.

Mon Sep 26 14:10:54 2016  Ary Borenszweig  <ary@esperanto.org.ar>

	* string.c (lstrip_offset): add a fast path in the case of single
	  byte optimizable strings, as well as rstrip_offset.
	  [ruby-core:77392] [Feature #12788]

Mon Sep 26 12:00:12 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gems/bundled_gems: update to minitest-5.9.1.

Mon Sep 26 11:50:03 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* tool/rbinstall.rb (gem): Don't install gemspec if no files will be
	  installed for the gem. This happens when the extension library is not
	  compiled.

Mon Sep 26 11:06:47 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* string.c (enc_strlen, rb_enc_strlen_cr): Avoid signed integer
	  overflow. The result type of a pointer subtraction may have the same
	  size as long. This fixes String#size returning an negative value on
	  i686-linux environment:

	    str = "\x00" * ((1<<31)-2))
	    str.slice!(-3, 3)
	    str.force_encoding("UTF-32BE")
	    str << 1234
	    p str.size

Sun Sep 25 22:48:06 2016  namusyaka  <namusyaka@gmail.com>

	* lib/erb.rb (ERB::Compiler::TrimScanner#stag): The :stag accessor
	  has already been available because it is defined in parent
	  Scanner class.  [Fix GH-1445]

Sun Sep 25 19:21:26 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* node.c (dump_array): remove duplicate header of NODE_ARRAY/