@@ -1,3 +1,14 @@
+Mon Sep 26 16:23:49 2016  Kazuki Yamaguchi  <k@rhe.jp>
+
+	* ext/stringio/stringio.c (strio_seek): Avoid signed integer overflow.
+	  It's not harmful in practice here, but is still undefined behavior.
+
+	* ext/stringio/stringio.c (strio_extend): Check that the new length does
+	  not exceed LONG_MAX. This fixes the invalid write on the overflow.
+
+	* test/stringio/test_stringio.rb (test_write_integer_overflow): Add a
+	  test case for the above fix in strio_extend().
+
 Mon Sep 26 15:43:34 2016  Kazuki Yamaguchi  <k@rhe.jp>
 
 	* eval_intern.h (TH_PUSH_TAG): Initialize struct rb_vm_tag::tag with
